      the test. For example, a test file named 'foo.vvt' with

          #VVT: parameterize : material = steel
          #VVT: parameterize : shape = square round

      would result in execution directory names

          foo.shape=square
          foo.shape=round

      The parameter 'material' is still defined in the vvtest_util.py file.

Fixes:

    - A previous refactoring broke the use of the 'extra_flags' and 'submit_flags'
      platform options, such as

          $ vvtest --batch --platopt extra_flags="--license=gpfs"

      Both of those options work again (which adds arbitrary flags to batch
      submissions).

    - After using the --run-dir option to name the test results directory,
      a subsequent vvtest run would not recognize the directory as containing
      test results. The effect was that vvtest would "find" and run more
      tests than it should. This was fixed by using a "vvtest.cache" file
      as a marker file in test results directories.

    - Fix bug when using --minimal-xdirs. Staged tests would fail to run
      correctly if there was also a single valued parameter.

    - A bug was fixed when using -S name=value with multiple staged tests.

    - A bug was fixed when using --minimal-xdirs and a test used a "depends on"
      pattern with suppressed (or hidden) parameters.

    - For running on batched systems, filtering based on num cores (np) and
      num devices (ndevice) is now turned off by default (where default means
      no max given in the platform plugin or on the command line). However,
      for devices (GPUs), the max will be zero unless devices_per_node is
      set for the platform.

Changes:

    - The XML test format is now officially deprecated and will be removed
      at some future point. As a result, the default --scan-type option value
      has changed. By default, only "*.vvt" files will now be scanned. To use
      the previous behavior, add "--scan-type vvt,xml" to the vvtest command
      line.
